# stock-intelligence-terminal

./: .gitignore  Dockerfile  LICENSE  README.md  app.py  nginx.conf  pyproject.toml  requirements.txt  style.css  test_platform.py
