[tool.poetry]
name = "stock-intelligence-terminal"
version = "0.1.0"
description = "Interactive stock analysis dashboard with async Yahoo Finance fetch, cached parquet history, and TradingView lightweight charts"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.34"
yfinance = "^0.2.37"
pandas = "^2.2"
numpy = "^1.26"
scipy = "^1.12"
aiohttp = "^3.9"
fastparquet = "^2024.2"
statsmodels = "^0.14"
TA-Lib = "^0.4.28"
requests = "^2.32"

[tool.poetry.group.dev.dependencies]
black = "^24.4"
isort = "^5.13"
pytest = "^8.1"

[tool.poetry.scripts]
start = "streamlit.cli:main"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"